refactor: review and simplify HTTP module